--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "lib/forge-std"]
 	path = lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "lib/openzeppelin-contracts-2.3.0"]
+	path = lib/openzeppelin-contracts-2.3.0
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+	branch = release-v2.3.0
