--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 	path = lib/openzeppelin-contracts-2.3.0
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts
 	branch = release-v2.3.0
+[submodule "lib/solidity-lib"]
+	path = lib/solidity-lib
+	url = https://github.com/Uniswap/solidity-lib
